# goodboy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  getting-started.rst  index.rst  reference.rst  requirements.txt
src/goodboy/: __init__.py  declarative.py  errors.py  i18n.py  messages.py  schema.py  types.py  validator.py
src/goodboy/locale/: goodboy.pot
src/goodboy/locale/en/LC_MESSAGES/: goodboy.po
src/goodboy/locale/ru/LC_MESSAGES/: goodboy.po
src/goodboy/types/: dates.py  dicts.py  lists.py  numeric.py  python.py  simple.py  variants.py
tests/: conftest.py  test_declarative.py  test_goodboy.py  test_i18n.py  test_validator.py
tests/errors/: test_error.py  test_error_collection.py  test_json_error_formatter.py  test_message.py  test_message_collection.py
tests/types/: conftest.py  test_any_of.py  test_any_type.py  test_any_value.py  test_bool.py  test_callable_value.py  test_date.py  test_date_base.py  test_datetime.py  test_decimal.py  test_dict.py  test_float.py  test_int.py  test_list.py  test_none_value.py  test_numeric.py  test_str.py
