[tool.poetry]
name = "goodboy"
version = "0.1.0"
description = ""
authors = ["Maxim Andryunin <maxim.andryunin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.2"
Babel = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
